--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "my-new-project",
   "type": "module",
   "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/register": "^7.21.0",
     "@wdio/cli": "^8.3.10",
     "@wdio/local-runner": "^8.3.10",
     "@wdio/mocha-framework": "^8.3.0",
