--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "my-new-project",
-  
   "devDependencies": {
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.0",
@@ -15,5 +14,8 @@
   },
   "scripts": {
     "wdio": "wdio run ./wdio.conf.js"
+  },
+  "dependencies": {
+    "wdio-timeline-reporter": "^5.1.4"
   }
 }
