--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "wdio-chromedriver-service": "^8.1.1"
   },
   "scripts": {
-    "wdio": "wdio run ./wdio.conf.js"
+    "wdio": "wdio run ./wdio.conf.js",
+    "clear": "rm -rf result"
   },
   "dependencies": {
     "wdio-timeline-reporter": "^5.1.4"
